--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/cli": "^4.1.10",
     "bcrypt": "^6.0.0",
     "config": "^4.0.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "debug": "^4.4.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "flash": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "multer": "^2.0.1",
